# MetatraderAlgoBot

./: .gitignore  README.md  pyproject.toml
src/metatrader/: .env  __main__.py  main.py
src/metatrader/config/: config.py
src/metatrader/data/: tickers_data.db
src/metatrader/model/: order_status.py  order_type.py
src/metatrader/notebooks/: main.ipynb
src/metatrader/services/: backtester.py
src/metatrader/strategies/: ema_crossover.py
src/metatrader/utils/: factory.py
studies/: daily_high_low_analysis.ipynb  ema_crossover_backtest.ipynb  getting_started_with_algo_trading.ipynb  init.ipynb  nasdaq_fut_hl.ipynb  nasdaq_volume_analysis.ipynb
studies/csv/: daily_AUDUSD.csv  daily_BTCUSD.csv  daily_ETHUSD.csv  daily_EURUSD.csv  daily_GBPUSD.csv  daily_US100.csv  weekly_BTC-USD.csv  weekly_ES=F.csv  weekly_ETH-USD.csv  weekly_GBPUSD=X.csv  weekly_NQ=F.csv  weekly_^NSEI.csv  weekly_eurusd=x.csv
