[tool.poetry]
name = "metatrader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "metatrader", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
metatrader5 = "^5.0.45"
python-decouple = "^3.8"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
plotly = "^5.17.0"
ipykernel = "^6.25.2"
nbformat = "^5.9.2"
tabulate = "^0.9.0"
yfinance = "^0.2.31"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
